--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 # Project exclude paths
 .gradle
 .idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+HELP.md
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+**/application.properties
