--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.datasource.username=sa
 spring.profiles.include=oauth
-#spring.session.store-type=jdbc
+spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 
 
