--- a/appspec.yml
+++ b/appspec.yml
@@ -6,14 +6,14 @@ files:
     overwrite: yes
 hooks:
   AfterInstall:
-    -location: scripts/stop.sh # 엔진엑스와 연결되어있지 않은 스프링부트 종료
+    -location: stop.sh # 엔진엑스와 연결되어있지 않은 스프링부트 종료
     timeout : 60
     runas: ec2-user
   ApplicationStart:
-    -location: scripts/start.sh # 엔진엑스와 연결되어 있지 않은 Port로 새 버전 시작
+    -location: start.sh # 엔진엑스와 연결되어 있지 않은 Port로 새 버전 시작
     timeout: 60
     runas: ec2-user
   ValidateService:
-    -location: scripts/health.sh # 새 스프링부트 정상작동 확인
+    -location: health.sh # 새 스프링부트 정상작동 확인
     timeout: 60
     runas: ec2-user
