--- a/appspec.yml
+++ b/appspec.yml
@@ -4,11 +4,11 @@ files:
   - source: /
     destination: /home/ec2-user/app/step3/zip
     overwrite: yes
-permissions:
-  - object: /
-    pattern : "**"
-    owner : ec2-user
-    group: ec2-user
+#permissions:
+#  - object: /
+#    pattern : "**"
+#    owner : ec2-user
+#    group: ec2-user
 hooks:
   AfterInstall:
     - location: scripts/stop.sh # 엔진엑스와 연결되어있지 않은 스프링부트 종료
