--- a/appspec.yml
+++ b/appspec.yml
@@ -2,16 +2,23 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ec2-user/app/step2/zip
+    destination: /home/ec2-user/app/step3/zip
     overwrite: yes
 permissions:
   - object: /
-    pattern: "**"
-    owner: ec2-user
+    pattern : "**"
+    owner : ec2-user
     group: ec2-user
-
 hooks:
   AfterInstall:
-    - location: scripts/deploy.sh
+    - location: scripts/stop.sh # 엔진엑스와 연결되어있지 않은 스프링부트 종료
       timeout : 60
+      runas: ec2-user
+  ApplicationStart:
+    - location: scripts/start.sh # 엔진엑스와 연결되어 있지 않은 Port로 새 버전 시작
+      timeout: 60
+      runas: ec2-user
+  ValidateService:
+    - location: scripts/health.sh # 새 스프링부트 정상작동 확인
+      timeout: 60
       runas: ec2-user
