--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,5 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-application.properties
 application-oauth.properties
+application-local-db.properties
