--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,6 @@
-spring.jpa.show-sql=true
-
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-
-spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-spring.datasource.username=sa
 spring.profiles.include=oauth
-spring.session.store-type=jdbc
-spring.session.jdbc.initialize-schema=always
+spring.config.location=classpath:application-local-db.properties
+
+
 
 
